# rinha-de-backend-2024-q1-cadu

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  create_release.py  docker-compose.yml  pg16.1.tuned.Dockerfile  pyproject.toml
configs/: haproxy.cfg  nginx.conf
configs/postgresql/migrations/: 001_load_clients.sql
doc/: transaction.http
src/: config.rs  lib.rs  main.rs
src/cache/: connection.rs  pool.rs
src/config/: mod.rs  structs.rs
src/db/: connection.rs  mod.rs  pool.rs
src/db/queries/: clients.rs  mod.rs  statement.rs
src/db/queries/transaction/: mod.rs  structs.rs
src/redis/: connection.rs  pool.rs  queries.rs
src/routes/: mod.rs  statement.rs  transaction.rs
